* improved detection of relative OSGi URLs

Package org.springframework.osgi.test
* AbstractOsgiTest provides better error messages for bundle that fail to start
* custom artifact locators can be used with AbstractDependencyManagerTests
* removed all internal usage of system properties by the testing infrastructure
* removed the use of serialization inside the testing framework


Changes in version 1.0 final (2008-01-25)
-----------------------------------------

Package org.springframework.osgi.extensions.annotation
* aligned bundle symbolic name with the rest of the bundles

Package org.springframework.osgi.service
* refined the service proxy returned by OsgiServiceProxyFactoryBean so it doesn't allow usage after being destroyed

Package org.springframework.osgi.test
* removed deprecated mispelled Platforms#KNOPFLEFISH constant
* KnopflerfishPlatform exports automatically system packages for JDK 1.4/1.5
* refined test bundle creation to ignore duplicate META-INF/MANIFEST.MF
* optimized test bundle creation by using no compression
* AbstractOnTheFlyBundleCreatorTests automatic manifest generation does not add OSGi import entries for packages
  contained in the test bundle

Package org.springframework.osgi.util
* OsgiServiceUtils#getAllServices() deprecated method has been removed
* OsgiServiceUtils#getService() deprecated method has been removed
* default artifact locator picks up Maven 2 ~/.m2/settings.xml localRepository configuration
* DebugUtils uses a degradable logger to properly report error messages when the logging implementation is misconfigured
* BundleDelegatingClassLoader uses a degradable logger to properly report error messages when the logging implementation
  is misconfigured or the logging classes are not loaded yet

Changes in version 1.0 RC2 (2008-01-11)
---------------------------------------

General
* removed deprecated methods
* circular references between service importers, exporter and listeners are now supported